# axonal-tracking

./: .gitignore  README.md  pyproject.toml
data/: README.md  configuracion_actual.yaml
data/sinteticos/: sintetico_nivel1_gt.csv  sintetico_nivel1_resumen.csv
notebooks/: 02_sam2_prototipo.ipynb  03_sam3_prototipo.ipynb  04_kimografo.ipynb  05_tracking_kymobutler.ipynb
scripts/: extraer_frames_etiquetado.py  ver_video.py
src/axonal_tracking/: configuracion.py  ets_reader.py  kimografo.py  kimografo_sintetico.py  parametros.py  preprocesamiento.py  visualizacion.py
